--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="images/logo.svg" alt="Site Logo" width="50" height="50">
+            <img src="" alt="Site Logo" width="50" height="50">
             <span>WDD 321</span>
         </div>
         <button id="menu-toggle" aria-label="Toggle Menu">☰</button>
@@ -63,10 +63,10 @@
 
     <footer>
         <div class="social-links">
-            <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-            <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
+            <a href="" target="_blank">GitHub</a>
+            <a href="" target="_blank">LinkedIn</a>
         </div>
-        <p>&copy; <span id="year"></span> [Your Name] - Bolivia</p>
+        <p>&copy; <span id="year"></span> Alvin Chino - Bolivia</p>
         <p id="lastModified"></p>
     </footer>
 </body>
