--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav>
             <ul id="nav-menu" class="active">
                 <li><a href="#" class="active">Home</a></li>
-                <li><a href="#" class="active">Chamber</a></li>
+                <li><a href="chamber/directory.html" class="active">Chamber</a></li>
                 <li><a href="#" class="active">Final Project</a></li>
             </ul>
         </nav>
