--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="" alt="Site Logo" width="50" height="50">
+            <img src="chamber/images/logo.png" alt="Site Logo" width="50" height="50">
             <span>WDD 321</span>
         </div>
         <button id="menu-toggle" aria-label="Toggle Menu">☰</button>
