--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -6,11 +6,11 @@
     <title>Discover La Paz - Chamber of Commerce</title>
     <meta name="description" content="Discover tourist spots and opportunities in La Paz, Bolivia.">
     <meta name="author" content="ALVIN CHINO">
-    <meta property="og:title" content="Discover La Paz" />
+    <meta property="og:title" content="Discovering the city of peace through different tourist sites" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://alvinchm.github.io/wdd231/chamber/images/la paz.jpg" />
     <meta property="og:url" content="https://alvinchm.github.io/wdd231/chamber/discover.html" />
-    <meta property="og:description" content="Explore the wonders of La Paz. From the Illimani to the Cable Cars." />
+    <meta property="og:description" content="In the city of La Paz there are many places to see and discover. We will take a walk through Illimani, the cable car, and many other attractions that exist in this wonderful city." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
