--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul id="nav-menu" class="active">
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="chamber/index.html" class="active">Chamber</a></li>
-                <li><a href="final/site-plan.html" class="active">Final Project</a></li>
+                <li><a href="final/index.html" class="active">Final Project</a></li>
             </ul>
         </nav>
     </header>
