--- a/final/contact.html
+++ b/final/contact.html
@@ -7,12 +7,13 @@
     <meta name="description" content="Place an order or contact El Brasa.">
     <meta name="author" content="ALVIN CHINO">
     <link rel="stylesheet" href="styles/style.css">
-    <script type="module" src="scripts/main.js" defer></script>
+    <link rel="stylesheet" href="styles/larger.css">
+    <script type="module" src="scripts/main.js" ></script>
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo">🍗 EL POLLO</a>
+            <a href="index.html" class="logo"> EL POLLO</a>
             <button id="menu-btn" class="menu-btn">☰</button>
             <ul id="nav-links" class="nav-links">
                 <li><a href="index.html">Home</a></li>
