--- a/final/thanks.html
+++ b/final/thanks.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You - EL POLLO</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/larger.css">
 </head>
 <body>
     <header>
@@ -18,14 +19,14 @@
         </nav>
     </header>
 
-    <main style="text-align: center; max-width: 600px; margin: 40px auto; padding: 20px; background: white; border-radius: 8px;">
-        <h1 style="color: #D32F2F;">Thank You for Your Order!</h1>
+    <main class="thanks-main">
+        <h1 class="thanks-tittle">Thank You for Your Order!</h1>
         <p>We have received the following information:</p>
         
-        <div id="results" style="background: #F4F4F4; padding: 20px; text-align: left; margin: 20px 0; border-radius: 8px; border: 1px solid #ccc;">
+        <div id="results" class="results-box">
         </div>
 
-        <a href="index.html" class="btn" style="display:inline-block; width:auto; text-decoration:none;">Back to Home</a>
+        <a href="index.html" class="btn btn-link">Back to Home</a>
     </main>
 
     <footer>
