--- a/final/contact.html
+++ b/final/contact.html
@@ -6,8 +6,24 @@
     <title>Contact Us - EL POLLO Chicken</title>
     <meta name="description" content="Place an order or contact El Brasa.">
     <meta name="author" content="ALVIN CHINO">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="EL POLLO Chicken">
+    <meta property="og:description" content="Order our chicken and chicharron that are the best in town.">
+    <meta property="og:image" content="https://alvinchm.github.io/wdd231/final/images/pollo1.webp">
+    <meta property="og:url" content="https://alvinchm.github.io/wdd231/final/contact.html">
+
+    <link rel="icon" href="images/favicon.ico">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/larger.css">
+
+
     <script type="module" src="scripts/main.js" ></script>
 </head>
 <body>
