--- a/final/menu.html
+++ b/final/menu.html
@@ -6,6 +6,20 @@
     <title>Menu - EL POLLO Chicken</title>
     <meta name="description" content="View our full menu of chicken, chicharron, and combos.">
     <meta name="author" content="ALVIN CHINO">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="EL POLLO Chicken">
+    <meta property="og:description" content="Order our chicken and chicharron that are the best in town.">
+    <meta property="og:image" content="https://alvinchm.github.io/wdd231/final/images/pollo1.webp">
+    <meta property="og:url" content="https://alvinchm.github.io/wdd231/final/menu.html">
+
+    <link rel="icon" href="images/favicon.ico">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/larger.css">    
     <script type="module" src="scripts/main.js" ></script>
@@ -30,7 +44,7 @@
         <div id="menu-container" class="menu-grid"></div>
 
         <dialog id="item-modal">
-            <h3 id="modal-title">Item Name</h3>
+            <h2 id="modal-title">Item Name</h2>
             <p id="modal-desc">Item Description will go here.</p>
             <button id="close-modal" class="btn">Close</button>
         </dialog>
