--- a/final/contact.html
+++ b/final/contact.html
@@ -59,7 +59,7 @@
 
     <footer>
         <p>&copy; 2026 EL POLLO. WDD231 Final Project.</p>
-        <p><a href="https://youtube.com/tu-video-link" target="_blank">Watch my Video Demonstration</a></p>
+        <p><a href="https://www.loom.com/share/8b943111bb95439d861bb08d7df50500" target="_blank">Watch my Video Demonstration</a></p>
     </footer>
 </body>
 </html>
