--- a/final/contact.html
+++ b/final/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - EL POLLO Chicken</title>
-    <meta name="description" content="Place an order or contact El Brasa.">
+    <meta name="description" content="Place an order or contact EL POLLO.">
     <meta name="author" content="ALVIN CHINO">
 
     <meta property="og:type" content="website">
