--- a/final/index.html
+++ b/final/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="EL POLLO Chicken">
     <meta property="og:description" content="Order our chicken and chicharron that are the best in town.">
-    <meta property="og:image" content="https://alvinchm.github.io/wdd231/final/images/pollo1.webp">
+    <meta property="og:image" content="https://alvinchm.github.io/wdd231/final/images/mixed.jpg">
     <meta property="og:url" content="https://alvinchm.github.io/wdd231/final/index.html">
 
     <link rel="icon" href="images/favicon.ico">
